[gd_scene load_steps=7 format=3 uid="uid://c8x7e5whnksyn"]

[ext_resource type="Theme" uid="uid://bimvjqmjjj4jh" path="res://assets/resources/theme/main.tres" id="1_6enco"]
[ext_resource type="Script" uid="uid://buukwghajq4u8" path="res://scr/user_interface/pages/settings_page/setting_category_header.gd" id="2_fh1d4"]
[ext_resource type="FontFile" uid="uid://bjr2pe6fnpvm3" path="res://assets/resources/fonts/NotoSans-Bold.ttf" id="3_1xwcj"]
[ext_resource type="Texture2D" uid="uid://cdtu1dxs2afjl" path="res://assets/textures/icons/dices.svg" id="3_syudo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fh1d4"]

[sub_resource type="LabelSettings" id="LabelSettings_syudo"]
font = ExtResource("3_1xwcj")

[node name="SettingCategoryHeader" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
theme = ExtResource("1_6enco")
theme_override_styles/panel = SubResource("StyleBoxEmpty_fh1d4")
script = ExtResource("2_fh1d4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CategoryIconTextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_syudo")
expand_mode = 3
stretch_mode = 5

[node name="CategoryNameLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "SETTING_CATEGORY_CHECK_FOR_NEW_RELEASES_ON_STARTUP"
label_settings = SubResource("LabelSettings_syudo")
vertical_alignment = 1
text_overrun_behavior = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Empty" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.02

[node name="SettingsContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
